Fixed build file so it is possible to publish artifacts to local Maven repository (cherry picked from commit 25d6f911f74f8c1c95f7c955df6c9c4c9822cfaf)

--- a/ivy/libraries.properties
+++ b/ivy/libraries.properties
@@ -12,5 +12,6 @@ hadoop-common.version=2.0.0-cdh4.0.1
 ivy.version=2.2.0
 junit.version=4.8.1
 log4j.version=1.2.16
+ivy.version=2.2.0
 ant-task.version=2.0.10
 
